	  Moved the Unix scheduler to the lib/silcutil/unix/ directory
	  and created lib/silcutil/win32 directory for WIN32 based
	  scheduler.

	* Added Unix specific network routines to the
	  lib/silcutil/unix/silcunixnet.c and the old
	  lib/silcutil/silcnet.c includes now only generic routines.

	  Added WIN32 specific network routines to the
	  lib/silcutil/win32/silcwin32net.c.

Fri Jun 22 10:44:14 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not handle JOIN notify in the server if the target client
	  is not registered (idata->registered == FALSE).  The affected
	  file is silcd/packet_receive.c.

	* Update the nickrec->founder in event_cumode in the Irssi SILC
	  client.  Affected file irssi/src/silc/core/silc-channels.c.

	* Fixed the CUMODE_CHANGE notify handling in the server when
	  server and router are announcing their clients on channels.
	  Now the mode changes are saved and notified correctly.  The
	  affected file is /silcd/packet_receive.c.

	* Fixed silc_idlit_replace_[server/client/channel]_id functions.
	  They really did not replace the cache entry in the ID Cache.
	  Now they do that.  Affected file silcd/idlist.c.

	* Fixed the KICK notify handling in the Irssi SILC client to
	  update the channel records so that the kicked client does not
	  appear to be on the channel.  The affected file is 
	  irssi/src/silc/core/silc-channels.c.

	* Always update the conn->current_channel when executing command
	  on a channel.  Affected file irssi/src/silc/core/silc-servers.c.

	* Fixed the KILL notify handling in Irssi SILC client to remove
	  the killed client on all channels.

Thu Jun 21 17:10:08 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the silc_parse_command_line to remove extra spaces
	  from the start and end of the arguments.  Affected file is
	  lib/silcutil/silcutil.c.

	* Cancel and free any active protocol in the function
	  silc_server_close_connection.  Affected file silcd/server.c.
