@@ -24,9 +24,11 @@
   #pragma alloca
 #endif
 
+/*
 #ifndef _GNU_SOURCE
 #define _GNU_SOURCE
 #endif
+*/
 
 /* We need this for `regex.h', and perhaps for the Emacs include files.  */
 #include <sys/types.h>
